--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="static/js/jquery.js"></script>
 	<script src="static/js/clipboard.min.js"></script>  
 	<script type="text/javascript">
-	if(!/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) { window.location.href = "index.php"; }
+	if(!/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) { window.location.href = "api/index.php"; }
 	</script>
 	<link rel="stylesheet" href="static/css/syystyle.css">
 <style type="text/css">
