--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>小妹妹</title>
+    <title>XMM</title>
     <meta name="keywords" content="抖音，快手，火山美女视频" />
     <meta name="description" content="随机视频播放" />
 	<script type="text/javascript" src="static/js/jquery-1.8.3.min.js"></script>
